--- a/styles/sass/_stretch-setup.scss
+++ b/styles/sass/_stretch-setup.scss
@@ -38,6 +38,10 @@
     }
 
     @media screen and (max-width: 600px){
+        .prompt{
+            text-align: center;
+        }
+
         .stretch-field{
             flex-direction: column;
         }
